syntax = "proto3";

package lcm.service.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

service LcmClientService {
  // Client registration (public)
  rpc RegisterLcmClient(CreateLcmClientRequest) returns (CreateLcmClientResponse) {}
  rpc GetRequestStatus(GetRequestStatusRequest) returns (GetRequestStatusResponse) {}
  rpc DownloadClientCertificate(DownloadClientCertificateRequest) returns (DownloadClientCertificateResponse) {}

  // List all certificates for a client (requires mTLS authentication)
  rpc ListClientCertificates(ListClientCertificatesRequest) returns (ListClientCertificatesResponse) {}

  // Stream certificate updates to the client (server-streaming, requires mTLS authentication)
  // The server pushes notifications when certificates are issued, renewed, or revoked
  rpc StreamCertificateUpdates(StreamCertificateUpdatesRequest) returns (stream CertificateUpdateEvent) {}
}
enum MtlsCertificateType {
  MTLS_CERT_TYPE_UNSPECIFIED = 0;
  MTLS_CERT_TYPE_CLIENT = 1;
  MTLS_CERT_TYPE_INTERNAL = 2;
}
enum ClientCertificateStatus {
  CLIENT_CERT_STATUS_UNKNOWN = 0;
  CLIENT_CERT_STATUS_ISSUED = 1;
  CLIENT_CERT_STATUS_PENDING = 2;
  CLIENT_CERT_STATUS_REVOKED = 3;
}
// DownloadClientCertificateRequest is used by clients to download their certificate using public key verification
message DownloadClientCertificateRequest {
  string public_key = 1 [(buf.validate.field).string = {
    min_len: 200
    max_len: 8192
    pattern: "^-----BEGIN PUBLIC KEY-----[\\s\\S]*-----END PUBLIC KEY-----[\\s]*$"
  }]; // Public key of the certificate used for validation
  string request_id = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
    pattern: "^[a-fA-F0-9-]{8,128}$"
  }]; // Used to find the correct certificate and verify it with the public key
  string client_id = 3 [(buf.validate.field).string = {
    min_len: 1
    max_len: 64
    pattern: "^[a-zA-Z0-9][a-zA-Z0-9_-]*$"
  }]; // ID of the client requesting the certificate
}
message DownloadClientCertificateResponse {
  optional string certificate_pem = 1 [(buf.validate.field).string = {
    min_len: 200
    max_len: 16384
    pattern: "^-----BEGIN CERTIFICATE-----[\\s\\S]*-----END CERTIFICATE-----[\\s]*$"
  }]; // PEM encoded mTLS client certificate
  optional string ca_certificate_pem = 2 [(buf.validate.field).string = {
    min_len: 200
    max_len: 16384
    pattern: "^-----BEGIN CERTIFICATE-----[\\s\\S]*-----END CERTIFICATE-----[\\s]*$"
  }]; // PEM encoded CA certificate
  ClientCertificateStatus status = 3;
}

message GetRequestStatusRequest {
  string request_id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
    pattern: "^[a-fA-F0-9-]{8,128}$"
  }];
  string client_id = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
    pattern: "^[a-zA-Z0-9][a-zA-Z0-9_-]*$"
  }];
}

message GetRequestStatusResponse {
  ClientCertificateStatus status = 1 [(buf.validate.field).enum = {defined_only: true}];
  optional string message = 2;
  optional google.protobuf.Timestamp create_time = 200; // Creation time
  optional google.protobuf.Timestamp update_time = 201; // Update time
  optional google.protobuf.Timestamp revoke_time = 202; // Revoke time
}
message CreateLcmClientRequest {
  string client_id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 64
    pattern: "^[a-zA-Z0-9][a-zA-Z0-9_-]*$"
  }];
  string hostname = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 253
    pattern: "^[a-zA-Z0-9]([a-zA-Z0-9\\-]{0,61}[a-zA-Z0-9])?(\\.[a-zA-Z0-9]([a-zA-Z0-9\\-]{0,61}[a-zA-Z0-9])?)*$"
  }];
  optional string shared_secret = 3;
  string public_key = 4 [(buf.validate.field).string = {
    min_len: 200
    max_len: 8192
    pattern: "^-----BEGIN PUBLIC KEY-----[\\s\\S]*-----END PUBLIC KEY-----[\\s]*$"
  }]; // Client's public key for initial cert
  repeated string dns_names = 5 [(buf.validate.field).repeated = {
    max_items: 100
    items: {
      string: {
        min_len: 1
        max_len: 253
        pattern: "^[a-zA-Z0-9*]([a-zA-Z0-9\\-*]{0,61}[a-zA-Z0-9*])?(\\.[a-zA-Z0-9*]([a-zA-Z0-9\\-*]{0,61}[a-zA-Z0-9*])?)*$"
      }
    }
  }];
  repeated string ip_addresses = 6 [(buf.validate.field).repeated = {
    max_items: 50
    items: {
      string: {pattern: "^((25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\.){3}(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$|^([0-9a-fA-F]{1,4}:){7}[0-9a-fA-F]{1,4}$|^::1$|^::$|^([0-9a-fA-F]{1,4}:){1,7}:$|^([0-9a-fA-F]{1,4}:){1,6}:[0-9a-fA-F]{1,4}$|^([0-9a-fA-F]{1,4}:){1,5}(:[0-9a-fA-F]{1,4}){1,2}$|^([0-9a-fA-F]{1,4}:){1,4}(:[0-9a-fA-F]{1,4}){1,3}$|^([0-9a-fA-F]{1,4}:){1,3}(:[0-9a-fA-F]{1,4}){1,4}$|^([0-9a-fA-F]{1,4}:){1,2}(:[0-9a-fA-F]{1,4}){1,5}$|^[0-9a-fA-F]{1,4}:((:[0-9a-fA-F]{1,4}){1,6})$|^:((:[0-9a-fA-F]{1,4}){1,7}|:)$"}
    }
  }];
  map<string, string> metadata = 50 [(buf.validate.field).map = {
    max_pairs: 50
    keys: {
      string: {
        min_len: 1
        max_len: 64
        pattern: "^[a-zA-Z][a-zA-Z0-9_]*$"
      }
    }
    values: {
      string: {max_len: 512}
    }
  }]; // Custom metadata/labels
  optional uint32 created_by = 100 [json_name = "createdBy"];
  optional uint32 updated_by = 101 [json_name = "updatedBy"];
  optional uint32 revoked_by = 102 [json_name = "revokedBy"];

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt"];
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt"];
  optional google.protobuf.Timestamp revoked_at = 202 [json_name = "revokedAt"];
}
message CreateLcmClientResponse {
  optional LcmClient client = 1;
  optional ClientCertificate certificate = 2;
  optional string ca_certificate = 3 [(buf.validate.field).string = {
    min_len: 200
    max_len: 16384
    pattern: "^-----BEGIN CERTIFICATE-----[\\s\\S]*-----END CERTIFICATE-----[\\s]*$"
  }]; // PEM encoded CA certificate
}
// ClientCertificate is a simplified view of an mTLS certificate for client-facing APIs
message ClientCertificate {
  optional uint32 id = 1;
  optional string common_name = 2;
  optional string request_id = 3;
  optional string serial_number = 4;
  optional string subject = 5;
  optional string issuer_dn = 6;
  optional string fingerprint = 7;
  optional string certificate_pem = 8;
  optional string not_before = 9;
  optional string not_after = 10;
  optional ClientCertificateStatus status = 11;
  optional string metadata = 12;
  optional google.protobuf.Timestamp last_seen = 13;
  optional google.protobuf.Timestamp revoked_at = 14;
  optional string revoked_by = 15;
  optional string revoked_reason = 16;
  optional google.protobuf.Timestamp expires_at = 17;
  optional string approved_by = 18;
  optional MtlsCertificateType cert_type = 19;
  optional uint32 tenant_id = 20 [json_name = "tenantId"];
  optional uint32 create_by = 100;
  optional uint32 update_by = 101;
  optional google.protobuf.Timestamp create_time = 200;
  optional google.protobuf.Timestamp update_time = 201;
  optional google.protobuf.Timestamp delete_time = 202;
}
enum LcmClientStatus {
  LCM_CLIENT_UNSPECIFIED = 0;
  LCM_CLIENT_ACTIVE = 1;
  LCM_CLIENT_DISABLED = 2;
  LCM_CLIENT_SUSPENDED = 3;
}

message LcmClient {
  optional uint32 id = 1;
  optional string client_id = 2;
  optional string description = 3;
  optional string contact_email = 4;
  optional LcmClientStatus status = 5;
  map<string, string> metadata = 6;
  optional uint32 tenant_id = 7 [json_name = "tenantId"];
  optional string organization = 10;
  optional int32 mtls_certificate_count = 11;
  optional int32 owned_issuer_count = 12;
  optional int32 issued_certificate_count = 13;
  optional int32 certificate_request_count = 14;
  optional google.protobuf.Timestamp create_time = 200;
  optional google.protobuf.Timestamp update_time = 201;
  optional google.protobuf.Timestamp delete_time = 202;
}

// ListClientCertificatesRequest - list all certificates for the authenticated client
message ListClientCertificatesRequest {
  // client_id is extracted from mTLS certificate CN, but can be provided for verification
  optional string client_id = 1 [(buf.validate.field).string = {
    max_len: 64
    pattern: "^[a-zA-Z0-9][a-zA-Z0-9_-]*$"
  }];
  // Filter by certificate status
  optional ClientCertificateStatus status_filter = 2;
  // Include certificate PEM in response (default: false for list, true for download)
  optional bool include_certificate_pem = 3;
}

// ListClientCertificatesResponse - contains all certificates for the client
message ListClientCertificatesResponse {
  repeated CertificateInfo certificates = 1;
  optional string ca_certificate_pem = 2; // CA certificate for verification
}

// CertificateInfo - detailed certificate information for client use
message CertificateInfo {
  string name = 1; // Certificate name/identifier (e.g., hostname or CN)
  string serial_number = 2;
  string common_name = 3;
  repeated string dns_names = 4;
  repeated string ip_addresses = 5;
  string issuer_name = 6;
  ClientCertificateStatus status = 7;
  google.protobuf.Timestamp issued_at = 8;
  google.protobuf.Timestamp expires_at = 9;
  optional string certificate_pem = 10; // Only included if requested
  optional string fingerprint_sha256 = 11;
  bool is_renewed = 12; // True if this cert replaced a previous one
  optional string previous_serial_number = 13; // Serial of the cert this one replaced
}

// StreamCertificateUpdatesRequest - subscribe to certificate updates
message StreamCertificateUpdatesRequest {
  // client_id is extracted from mTLS certificate CN
  optional string client_id = 1 [(buf.validate.field).string = {
    max_len: 64
    pattern: "^[a-zA-Z0-9][a-zA-Z0-9_-]*$"
  }];
}

// CertificateUpdateEvent - pushed by server when certificate changes occur
message CertificateUpdateEvent {
  CertificateUpdateType event_type = 1;
  CertificateInfo certificate = 2;
  optional string ca_certificate_pem = 3; // Included with issued/renewed events
  google.protobuf.Timestamp event_time = 4;
  optional string message = 5; // Human-readable description
}

// CertificateUpdateType - types of certificate update events
enum CertificateUpdateType {
  CERTIFICATE_UPDATE_UNSPECIFIED = 0;
  CERTIFICATE_ISSUED = 1;    // New certificate issued
  CERTIFICATE_RENEWED = 2;   // Certificate was renewed
  CERTIFICATE_REVOKED = 3;   // Certificate was revoked
  CERTIFICATE_EXPIRING = 4;  // Certificate expiring soon (warning)
}
